src/css/_styles.scss
body {
	font-family: $sans-serif;
	background-image: url('../../images/clouds.jpg');
	background-size: cover;
	color: $blackish;
	text-align: center;
	h1 {
		font-size: 28px;
		color: $white;
		margin: 40px;
		font-weight: 400;
		letter-spacing: .01em;
	}
	form {
		position: relative;
		margin-bottom: 35px;
	}
	.container {
		width: 50%;
		max-width: 800px;
		margin: 0 auto;
		padding: 5%;
		.input-field {
			width: 96%;
			font-family: $sans-serif;
			padding: 12px;
			font-size: 15px;
			border: none;
			color: #939393;
			letter-spacing: .01em;
		}
		input[type=submit] {
			height: 39px;
			width: 70px;
			border-radius: 0;
			border: none;
			position: absolute;
			top: 0;
			right: 0px;
			color: $white;
			font-size: 16px;
			font-family: $sans-serif;
			padding-top: 5px;
		}
		.select-overlay {
			position: absolute;
			top: 0;
			right: 70px;
			z-index: 0;
			background-color: #aaa;
			color: $white;
			padding: 13px 40px 10px 15px;
			font-size: 16px;
		  	&:after {
		  		@include triangle;
		  		top: 20px;
    			right: 15px;
		  	}
		}
		select {
			z-index: 1;
			opacity: 0;
			position: absolute;
			top: 0;
			height: 41px;
			width: 106px;
			background: 0 0;
			right: 70px;;
		}
	}

	.todo-list {
		width: 85%;
		margin: 0 auto;
		margin-bottom: 100px;
		.input-field {
			background: none;
			color: $white;
		}
		.list-item {
			padding: 5px 0; 
			cursor: move;
			position: relative;
			border-bottom: 1px dashed $white;
			.controls {
				position: absolute;
				right: 2.5%;
				top: 16px;
				color: $white;
			}
			i {
				margin-left: 15px;
				font-size: 20px;
				// font-weight: bold;
				&:hover {
					cursor: pointer;
				}
			}
		}
		.completed {
			text-decoration: line-through;
		}
	}
	.instructions {
		color: $white;
		padding: 40px;
		font-size: 15px;
		line-height: 20px;
		letter-spacing: .01em;
		a {
			border-bottom: 1px solid;
			cursor: pointer;
		}
	}

	footer {
		position: fixed;
		bottom: 0;
		left: 0;
		right: 0;
		background-color: $white;
		opacity: 0.5;
		padding: 16px;
		.mini-footer a {
			font-size: 16px;
			&:hover {
				cursor: pointer;
			}
			.caret {
				padding-left: 15px;
				&:after {
					@include triangle;
					top: 22px;
	    			border: 7px solid transparent;
	    			border-color: $blackish transparent transparent;
				}
				&.up {
					&:after {
						border-bottom: 7px solid $blackish;
	    				border-top: 0px;
					}
				}
			}
		}
		.expanded-footer {
			position: relative;
			line-height: 26px;
			background-color: $white;
			color: $blackish;
			width: 55%;
			margin: 0 auto;
			font-size: 14px;
		}
		ul {
			padding-left: 0;
			list-style: none;
			margin-bottom: 0;
			li {
				display: inline-block;
				padding: 0 10px;
				font-size: 28px;
				&:last-child {
					font-size: 28px;
				}
			}
			a {
				text-decoration: none;
				color: $blackish;
			}
		}
		.closed {
			display: none;
		}
		.open {
			display: block;
		}
	}
}

